--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -5,12 +5,12 @@
 {% endblock %}
 
 {% block body %}
-    <div class='d-flex justify-content-between align-items-center'>
+    <div class='d-flex flex-wrap justify-content-between align-items-center mt-2'>
         <h1>Задачник</h1>
 
         <!-- Сортировка -->
         {% if tasks is not empty %}
-            <div class="btn-group">
+            <div class="btn-group mb-2">
                 <div class="dropdown mr-1">
                     <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Поле сортировки
