--- a/app/views/home/login.html
+++ b/app/views/home/login.html
@@ -25,7 +25,7 @@
                         type="text"
                         autofocus
                         class="form-control rounded-0 rounded-top-right"
-                        name="email
+                        name="email"
                         placeholder="email"
                         aria-label="email"
                         aria-describedby="basic-addon1">
